slightly updated the single channel page layout and css

--- a/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
@@ -39,6 +39,8 @@ $dark:          $gray-800 !default;
 
 $yiq-contrasted-threshold:  185 !default;
 
+$grid-gutter-width: 20px !default;
+
 // Options
 
 $enable-rounded:            false !default;
