--- a/gulp/scss/styles.scss
+++ b/gulp/scss/styles.scss
@@ -88,3 +88,4 @@
 @import "./powderkeg/04_pages/home";
 @import "./powderkeg/04_pages/sitewide";
 @import "./powderkeg/04_pages/darkmode";
+@import "./powderkeg/04_pages/channel";
