--- a/wp-content/themes/narrative/styles/dev.css
+++ b/wp-content/themes/narrative/styles/dev.css
@@ -462,8 +462,8 @@ pre {
 
 .container {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-right: auto;
   margin-left: auto; }
   @media (min-width: 576px) {
@@ -481,8 +481,8 @@ pre {
 
 .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
   margin-right: auto;
   margin-left: auto; }
 
@@ -505,8 +505,8 @@ pre {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px; }
+  margin-right: -10px;
+  margin-left: -10px; }
 
 .no-gutters {
   margin-right: 0;
@@ -524,8 +524,8 @@ pre {
 .col-xl-auto {
   position: relative;
   width: 100%;
-  padding-right: 15px;
-  padding-left: 15px; }
+  padding-right: 10px;
+  padding-left: 10px; }
 
 .col {
   flex-basis: 0;
@@ -3305,22 +3305,22 @@ input[type="button"].btn-block {
   width: 100%; }
 
 .card-deck .card {
-  margin-bottom: 15px; }
+  margin-bottom: 10px; }
 
 @media (min-width: 576px) {
   .card-deck {
     display: flex;
     flex-flow: row wrap;
-    margin-right: -15px;
-    margin-left: -15px; }
+    margin-right: -10px;
+    margin-left: -10px; }
     .card-deck .card {
       flex: 1 0 0%;
-      margin-right: 15px;
+      margin-right: 10px;
       margin-bottom: 0;
-      margin-left: 15px; } }
+      margin-left: 10px; } }
 
 .card-group > .card {
-  margin-bottom: 15px; }
+  margin-bottom: 10px; }
 
 @media (min-width: 576px) {
   .card-group {
@@ -9926,3 +9926,13 @@ body {
         fill: #f8f9fa; }
     body.darkmode .card.video .card-body {
       color: #f8f9fa; }
+
+#single-channel .card.video {
+  width: 100%; }
+  #single-channel .card.video .card-img-back {
+    width: 100%;
+    height: auto;
+    padding-top: 56.25%; }
+    #single-channel .card.video .card-img-back img {
+      width: 100%;
+      height: auto; }
