--- a/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
@@ -13,7 +13,7 @@ $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #919aa1 !default;
 $gray-700: #55595c !default;
-$gray-800: #343a40 !default;
+$gray-800: #373737 !default;
 $gray-900: #181818 !default;
 $black:    #000 !default;
 
@@ -28,7 +28,7 @@ $green:   #4bbf73 !default;
 $teal:    #20c997 !default;
 $cyan:    #1f9bcf !default;
 
-$primary:       $blue !default;
+$primary:       $gray-800 !default;
 $secondary:     $white !default;
 $success:       $green !default;
 $info:          $cyan !default;
