--- a/gulp/scss/powderkeg/02_elements/_forms.scss
+++ b/gulp/scss/powderkeg/02_elements/_forms.scss
@@ -1,15 +1,91 @@
 .form-control {
+	-moz-appearance:none;
+	background-color: $gray-700;
+	border-color: $gray-800;
+	color: $gray-200;
 	transition: all 0.2s;
+	width: 100%;
+
+	&:focus {
+		background-color: $gray-700;
+		color: $gray-200;
+	}
+
+	option,
+	&::placeholder {
+		color: $gray-200;
+	}
+
 }
 
-.input-group-text {
-	// background-color: white
-	transition: all 0.2s;
 
-	path {
-		transition: all 0.2s;
+
+.input-group-prepend {
+	.input-group-text {
+		background-color: $gray-800;
+		border-color: $gray-800;
+		color: $gray-100;
+		//transition: all 0.2s;
+
+		path {
+			fill: $gray-100;
+			//transition: all 0.2s;
+		}
 	}
 }
+
+
+
+//Dropdowns
+.jb-select { 
+	background-color: $white;
+	position: relative;
+
+	&:before { 
+		@include awesome-input("\f107", 16px, 16px);
+	}
+
+	select { 
+		border: 0;
+		position:relative; 
+		cursor: pointer; 
+		display: inline-block; 
+		padding: 5px 30px 5px 5px; 
+		outline: none; 
+		-webkit-appearance: none;
+		-moz-appearance: none; 
+		-ms-appearance: none;
+		width: 100%; 
+		max-width:100%;
+
+		&:-moz-focusring { 
+			color: transparent; 
+			text-shadow: 0 0 0 #000;
+		}
+
+		&.error { 
+			border: 1px solid $red; 
+		}
+
+		&:focus, &.active { 
+			//border-color:$red; 
+		}
+
+		&.placeholder { 
+			color:$red; 
+		}
+
+		option { 
+			padding: 4px 15px; 
+
+			&:disabled { 
+				display: none; 
+			}
+		}
+	}
+}
+
+
 
 
 // /* Generic */
@@ -157,57 +233,6 @@
 // }
 
 
-
-//Dropdowns
-.jb-select { 
-	background-color: $white;
-	position: relative;
-	
-
-
-	&:before { 
-		@include awesome-input("\f107", 16px, 16px);
-	}
-
-	select { 
-		border: 0;
-		position:relative; 
-		cursor: pointer; 
-		display: inline-block; 
-		padding: 5px 30px 5px 5px; 
-		outline: none; 
-		-webkit-appearance: none;
-		-moz-appearance: none; 
-		-ms-appearance: none;
-		width: 100%; 
-		max-width:100%;
-
-		&:-moz-focusring { 
-			color: transparent; 
-			text-shadow: 0 0 0 #000;
-		}
-
-		&.error { 
-			border: 1px solid $red; 
-		}
-
-		&:focus, &.active { 
-			//border-color:$red; 
-		}
-
-		&.placeholder { 
-			color:$red; 
-		}
-
-		option { 
-			padding: 4px 15px; 
-
-			&:disabled { 
-				display: none; 
-			}
-		}
-	}
-}
 
 // .pk-table-select {
 // 	position: relative;
